"modificación con prueba de app mobile"

--- a/index.html
+++ b/index.html
@@ -32,26 +32,18 @@
     </div>
     <hr class="hr">
     <main>
-        <section class="Inicio">
+        <section class="Inicio" id="Inicio">
             <div class="inicio-div">
                 <img class="img-foto" src="./img/foto.webp">
                 <h1 class="tituloPrincipal">Hola, soy <span>Leopoldo!</span></h1>
-                <p>Estoy desarrollando mis habilidades en tecnología, formándome en JavaScript, CSS, HTML, Python y
-                    Data Science , para ampliar mi conocimiento hacia el desarrollo Web y análisis de datos ;
-                    aportando mi visión de negocio a los proyectos en los que voy a participar. He trabajado en la
-                    industria petrolera como ingeniero en distintas actividades de seguimiento a la producción,
-                    analizando los indicadores derivados del proceso; detectando posibles desvíos para generar
-                    estadísticas e informes ejecutivos de gestión y realizando planes de ejecución para cumplir con
-                    los objetivos acordados . Me considero un profesional con adaptabilidad al cambio, interesado
-                    por las mejoras en los procesos y con orientación al logro de objetivos en un entorno
-                    colaborativo.</p>
+                <p>Estoy desarrollando mis habilidades en tecnología, formándome en JavaScript, CSS, HTML, Python y Data Science , para ampliar mi conocimiento hacia el desarrollo Web y análisis de datos ;aportando mi visión de negocio a los proyectos en los que voy a participar. He trabajado en la industria petrolera como ingeniero en distintas actividades de seguimiento a la producción, analizando los indicadores derivados del proceso; detectando posibles desvíos para generar estadísticas e informes ejecutivos de gestión y realizando planes de ejecución para cumplir con los objetivos acordados . Me considero un profesional con adaptabilidad al cambio, interesado por las mejoras en los procesos y con orientación al logro de objetivos en un entorno colaborativo.</p>
                 <a class="botonDescargar" href="./documents/CV Ing Leopoldo. Producción.pdf">Descargar mi CV</a><!-- este enlace debe tener apariencia de botón. -->
             </div>
         </section>
-        <section class="Contacto">
+        <section class="Contacto" id="Contacto">
             <div class="Contacto-div">
                 <h1 class="tituloSecundario">Hablemos!</h1>
-                <p>Si quieres que forme parte de equipo de trabajo, estás interesado en enviarme alguna información
+                <p>Si quieres que forme parte de tu equipo de trabajo, estás interesado en enviarme alguna información
                     de interés o quieres ver mis redes, te invito a darle click a los íconos siguientes...</p>
             </div>
             <ul class="menu-redes">
